docs: expense domain의 변경 내역을 주석에 반영